Fixed vertical alignment of user's name in accounts management

--- a/theme/dashboard/shop/accounts.less
+++ b/theme/dashboard/shop/accounts.less
@@ -17,7 +17,7 @@
   }
   li {
     // border: none !important;
-  } 
+  }
 
   .permission-toggle {
     background-color: @black05;
@@ -47,7 +47,11 @@
 }
 
 .member-list-item-profile {
+  .display(flex);
   .flex(1 1 auto);
+  .align-items(center);
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .member-list-item-controls {
